# ParallelProgramming

./: README.md
Lab1/hw1-project/: CMakeLists.txt  README.md
Lab1/hw1-project/include/: common.hpp  functions.hpp
Lab1/hw1-project/lib/: CMakeLists.txt  addNormal.cpp  addUsingAVX.cpp  addUsingThreads.cpp  dataMaker.cpp
Lab1/hw1-project/src/: main.cpp
Lab2/hw2-project/: .clang-format
Lab2/hw2-project/cache_measure/: main.cpp  measure
Lab2/hw2-project/matrix_multiplication/data/: matrix
Lab2/hw2-project/matrix_multiplication/include/: constant.hpp
Lab2/hw2-project/matrix_multiplication/src/: dag  dataMaker.cpp  datamake  mainDAG.cpp  mainDAG_2n.cpp  mainNormal.cpp  normal  (+4 more)
Lab2/hw2-project/memory-bandwidth-demo-master/: Makefile  main.c
Lab2/hw2-project/report/: report.md
Lab3/hw3-project/: README.md  run.sh
Lab3/hw3-project/checkcode/: pom.xml
Lab3/hw3-project/code/: multithread  multithread.bc  multithread.c  multithread.ll  result.txt  run.sh
Lab3/hw3-project/report/: report.md
Lab4/hw4-project/: CMakeLists.txt  vecMul_Foster.cpp  vecMul_Normal.cpp
Lab4/hw4-project/report/: report.md
Lab5/hw5-project/Problem1/: main  main.c  makefile
Lab5/hw5-project/Problem2/: main  main.c  makefile
Lab5/hw5-project/Problem3/: host_file  makefile  mpi_bandwidth  mpi_bandwidth.c  mpi_hello_world  mpi_hello_world.c  mpi_latency  mpi_latency.c  run.sh
Lab5/hw5-project/report/: report.html  report.md
Lab6/hw6-project/error-check/: error-test  error-test.cu
Lab6/hw6-project/jacobi/: jacobi  jacobi.cu
Lab6/hw6-project/report/: report.html  report.md
(+2 files in other folders)
